<resources>
    <string name="app_name">Sappa</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sappa_slogan">GET RID OF STUFF LAYING AROUND THE HOUSE</string>
    <string name="app_explanation">FIND STUFF YOU REALLY NEED</string>
    <string name="login_with">LOGIN WITH:</string>
    <string name="facebook_app_id">242225589710264</string>
    <string name="fb_login_protocol_scheme">fb242225589710264</string>
    <string name="login_cancel_message">Login was cancelled</string>
    <string name="nearby">Nearby</string>
    <string name="my_posts">My posts</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_can_we_help">How can we help you?</string>
    <string name="hi">HI</string>
    <string name="user_info">User Info</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="about">About</string>
    <string name="lorem_ipsum">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="i_need_it">I need It!</string>
    <string name="edit_post_string">I need to change something</string>
    <string name="delete_this_post">Delete this post</string>
    <string name="new_post_title">What are you giving:</string>
    <string name="title">Title</string>
    <string name="upload_an_image"><u>UPLOAD AN IMAGE</u></string>
    <string name="description">Description</string>
    <string name="empty_description">0/140</string>
    <string name="category">Category</string>
    <string name="electronics">ELECTRONICS &amp; HOME APPLIANCES</string>
    <string name="furniture">FURNITURE</string>
    <string name="books">BOOKS</string>
    <string name="clothing">CLOTHING</string>
    <string name="sports">SPORTS</string>
    <string name="children_and_infants"><![CDATA[CHILDREN & INFANTS]]></string>
    <string name="other">OTHER</string>
    <string name="publish">Publish!</string>
    <string name="failed_to_upload_image">Failed image upload to storage task</string>
    <string name="image_uploaded_successfully">Image uploaded to storage</string>
    <string name="post_published_successfully">Published successfully</string>
    <string name="failed_uploading_new_post">Failed image upload to storage</string>
    <string name="contact_info_enter_at_least_one">Contact info (enter at least one)</string>
    <string name="email">Email</string>
    <string name="item_location">Item location</string>
    <string name="use_current_location"><u>USE CURRENT LOCATION</u></string>
    <string name="phone_number">Phone number</string>
    <string name="or">or</string>
    <string name="enter_address"><u>ENTER AN ADDRESS</u></string>
    <string name="there_are_not_available_posts_right_now">There are no available posts right now…</string>
    <string name="you_have_no_posts_of_your_own_yet">You have no posts of your own yet…</string>
    <string name="logout">logout</string>
    <string name="distance_settings">Distance Settings</string>
    <string name="how_far_will_you_go">How far will you go?</string>
    <string name="about_sappa">About Sappa</string>
    <string name="search">Search</string>
    <string name="or_select_categories">Or select categories</string>
    <string name="find_me_neat_stuff">Find me neat stuff!</string>
    <string name="use_last_documented_location"><u>USE LAST LOCATION</u></string>
    <string name="choose_different_image"><u>CHOOSE A DIFFERENT IMAGE</u></string>
    <string name="select_action">Select Action</string>
    <string name="about_title">Tired of stuff laying around the house gathering dust?</string>
    <string name="about_first_paragraph">There might be someone in your area desperately looking for that exact item!</string>
    <string name="about_second_paragraph">Sappa app is here to help you in both cases. Born as a small university course project, Sappa soon became a part of the global village. Not only that it brought people together, the app helped substantially reduce the human footprint on the environment. By sharing we reduce the enormous toll that the production of new products, recycling and utilization processes take on planet Earth.</string>
    <string name="about_outline">So give a hand, share an item! :)</string>
    <string name="clear_search"><u>Clear Search</u></string>


</resources>
