<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.newpost.NewPostFragment"
    android:background="@drawable/background_gradient">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView 
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_post_title"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <android.support.v7.widget.CardView
            android:id="@+id/title_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view">

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:padding="15dp"
                android:maxLength="20"
                android:background="@android:color/transparent"
                android:textColor="@color/charcole"
                android:textColorHint="@color/charcole"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/title"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/image_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_card_view">
            
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/upload_image_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_an_image"
                    android:textColor="@color/charcole"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_light"
                    android:layout_margin="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="250dp"
                    android:adjustViewBounds="true"/>
                
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/description_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_card_view">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <EditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcole"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@android:color/transparent"
                    android:layout_margin="15dp"
                    android:hint="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/description_length_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="@color/charcole"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_margin="10dp"
                    android:text="@string/empty_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SmallSp" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/category_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="7dp"
            android:background="@drawable/settings_item_shape"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@id/description_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            xmlns:tools="http://schemas.android.com/tools">

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/category_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:background="@drawable/rounded_corners"
                    >

                    <View
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@drawable/expand_arrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraint_layout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/button"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corners" >

                    <TextView
                        android:id="@+id/category_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="17sp"
                        android:textColor="@color/charcole"
                        android:text="@string/category"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </android.support.constraint.ConstraintLayout>


                <com.github.aakira.expandablelayout.ExpandableLinearLayout
                    android:id="@+id/expandableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/constraint_layout"
                    android:orientation="vertical"
                    app:ael_duration="400"
                    app:ael_expanded="false">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="16dp">

                        <RadioGroup
                            android:id="@+id/category_radio_group"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/electronics_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/electronics"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            />

                        <RadioButton
                            android:id="@+id/furniture_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/furniture"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            />

                        <RadioButton
                            android:id="@+id/books_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/books"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/furniture_checkbox"/>

                        <RadioButton
                            android:id="@+id/clothing_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/clothing"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            />

                        <RadioButton
                            android:id="@+id/sports_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sports"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            />

                        <RadioButton
                            android:id="@+id/children_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/children_and_infants"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            />

                        <RadioButton
                            android:id="@+id/other_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/other"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:textColor="@color/charcole"
                            />

                        </RadioGroup>


                    </android.support.constraint.ConstraintLayout>


                </com.github.aakira.expandablelayout.ExpandableLinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/contact_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info_enter_at_least_one"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintTop_toBottomOf="@id/category_view"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:textColor="@color/white_semi_transparent"
            app:layout_constraintTop_toBottomOf="@id/contact_info_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/roboto_regular" />

        
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_view"/>

        <TextView
            android:id="@+id/item_location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_location"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text"/>

        <TextView
            android:id="@+id/user_current_location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="9dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_location_text_view"/>

        <TextView
            android:id="@+id/phone_number_text_view"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="10sp"
            android:textColor="@color/white_semi_transparent"
            android:fontFamily="@font/roboto_regular"
            tools:ignore="SmallSp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/contact_info_text_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text_view" />


        <Button
            android:id="@+id/publish_button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/white_button_selector"
            android:text="@string/publish"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/rich_lilach"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/user_current_location_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>