<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white"
    tools:context=".login.LoginActivity">

    <View
        android:background="@drawable/login_background_top_purple"
        android:layout_width="0dp"
        android:layout_height="360dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/sappa_logo_view"
        android:layout_width="156dp"
        android:layout_height="109dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_large"/>

    <TextView
        android:id="@+id/sappa_slogan_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/sappa_slogan"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/sappa_logo_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <View
        android:id="@+id/inner_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="2dp"
        android:background="@drawable/login_front_elevated_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sappa_slogan_view"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/app_explanation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_explanation"
        android:textColor="@color/charcoal"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:textSize="19sp"
        android:elevation="3dp"
        app:layout_constraintTop_toTopOf="@id/inner_view"
        app:layout_constraintStart_toStartOf="@id/inner_view"
        app:layout_constraintEnd_toEndOf="@id/inner_view"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/app_login_with_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_with"
        android:textColor="@color/charcoal"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16sp"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/app_explanation_text_view"
        app:layout_constraintStart_toStartOf="@id/app_explanation_text_view"
        app:layout_constraintEnd_toEndOf="@id/inner_view"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/google_login_button_selector"
        app:layout_constraintTop_toBottomOf="@id/app_login_with_text_view"
        app:layout_constraintStart_toStartOf="@id/app_login_with_text_view"
        android:layout_margin="20dp"/>


</android.support.constraint.ConstraintLayout>